<resources>
    <string name="app_name">NobelUserProfilePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hanna Gnatova</string>
    <string name="nav_header_subtitle">hanna_gnatova@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">STEM Projects</string>
    <string name="menu_slideshow">Resources</string>
    <string name="logo">logo</string>
    <string name="stem_projects">Stem Projects</string>
    <string name="resources">Resources</string>
    <string name="settings">Settings</string>
    <string name="share_button">share_button</string>
    <string name="avatarButton">button</string>
    <string name="menu_settings">Settings</string>
    <string name="birthday">Birthday :</string>
    <string name="name">Name :</string>
    <string name="change_your_avatar">Change your Avatar</string>
    <string name="address">Address :</string>
    <string name="email">Email :</string>
    <string name="phone">Phone :</string>
    <string name="_23_06_1993">23/06/1993</string>
    <string name="address_info">Backed Street 489, Boston, USA</string>
    <string name="name_text">hanna_gnatova@hotmail.com</string>
    <string name="personal_name">Hanna Gnatova</string>
    <string name="phone_number">+38096458293</string>
    <string name="image1">image1</string>
    <string name="image5">image5</string>
    <string name="image4">image4</string>
    <string name="image3">image3</string>
    <string name="image2">image2</string>
    <string name="home_image1">homeImage1</string>
    <string name="home_image2">homeImage2</string>
    <string name="home_image3">homeImage3</string>
    <string name="home_image4">homeImage4</string>
    <string name="home_image5">homeImage5</string>
</resources>