<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/home1"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:contentDescription="@string/home_image1"
                android:src="@drawable/home1"
                app:srcCompat="@drawable/home1" />

            <ImageView
                android:id="@+id/home2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/home_image2"
                android:src="@drawable/home2"
                app:srcCompat="@drawable/home2" />

            <ImageView
                android:id="@+id/home3"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:contentDescription="@string/home_image3"
                android:src="@drawable/home3"
                app:srcCompat="@drawable/home3" />

            <ImageView
                android:id="@+id/home4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/home_image4"
                android:src="@drawable/home4" />

            <ImageView
                android:id="@+id/home5"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:contentDescription="@string/home_image5"
                android:src="@drawable/home5" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>